# mcp-test-deployment

./: .gitignore  README.md  foro.yaml  mcphost.yaml  server.py
pdm/: README.md  foro.yaml  pyproject.toml  server.py
pipenv/: Pipfile  README.md  foro.yaml  server.py
poetry/: README.md  foro.yaml  pyproject.toml  server.py
requirements/: README.md  foro.yaml  requirements.txt  server.py
uv/: README.md  foro.yaml  pyproject.toml  server.py
